Use original method