@@ -41,7 +41,7 @@ public class Library {
         //輸入的單行指令由空格隔開(可以是多個)
         //透過stream的方法轉成List，構造成LinkedList
         //透過LinkedList提供的方法模擬隊列，避免索引寫死如果沒有操作數會越界的問題
-        LinkedList<String> strQueue = new LinkedList<>(Arrays.stream(cmdStr.split("\\s+")).collect(Collectors.toList()));
+        LinkedList<String> strQueue = new LinkedList<>(Arrays.stream(cmdStr.split("\\s+")).toList());
         String username = strQueue.getFirst();
         User invoker = users.get(strQueue.removeFirst());
         if(invoker == null){
